--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
               <br>
               <p align="right">
                 <font size="2">
-                  template adapted from <a href="https://jonbarron.info/">
+                  <a href="https://github.com/quantaji/quantaji.github.io">Source code</a> of this website. Template adapted from <a href="https://jonbarron.info/">
                     <font size="2">this awesome website</font>
                   </a>
                 </font>
