--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <p>
                 I am a master student of <a href="" https://inf.ethz.ch/studies/master/master-ds.html">Data Science</a>
                 program in <a href="https://ethz.ch/en.html"><strong>ETH
-                    Zürich</strong></a> in Switzerland, where I am working with Prof. <a
+                    Zürich</strong></a> in Switzerland, where I am working with <a
                   href="https://hermannblum.net/">Hermann Blum</a> and <a
                   href="https://francisengelmann.github.io/">Francis Engelmann</a> at the <a
                   href="https://cvg.ethz.ch">Computer Vision & Geometry Group</a> at ETH Zurich on 3D vision and video
@@ -191,7 +191,7 @@
               <br>
               <strong>Guangda Ji</strong>.
               <br>
-              <em>On going master thesis</em> supervised by Prof. <a href="https://hermannblum.net/">Hermann Blum</a>
+              <em>On going master thesis</em> supervised by <a href="https://hermannblum.net/">Hermann Blum</a>
               (Univ Bonn and ETHz) and <a href="https://francisengelmann.github.io/">Francis Engelmann</a> (Stanford and
               ETHz). Stay tuned :) !
               <br>
